syntax = "proto3";
package tempest.lobby;
option csharp_namespace = "Tempest.Protocol.Lobby";

message JoinLobbySuccess {
  string ticket = 1;
}