syntax = "proto3";
package tempest.lobby;
option csharp_namespace = "Tempest.Protocol.Lobby";

message LobbyEventPlayerLeave {
  string player_id = 1;
}