syntax = "proto3";
package tempest.lobby;
option csharp_namespace = "Tempest.Protocol.Lobby";

import "lobby/lobby_player.proto";

message LobbyEventPlayerUpdate {
  LobbyPlayer player = 1;
}