syntax = "proto3";
package tempest.lobby;
option csharp_namespace = "Tempest.Protocol.Lobby";

import "lobby/lobby_state.proto";

message LobbyEventStateUpdate {
  LobbyState state = 1;
}