syntax = "proto3";
package tempest.lobby;
option csharp_namespace = "Tempest.Protocol.Lobby";

message LobbyPlayer {
  string id = 1;
  string display_name = 2;
  int32 task_force = 3;
  string champion = 4;
}