syntax = "proto3";

import "lobby.proto";
import "lobby_player.proto";

option csharp_namespace = "Tempest.Protocol";

service LobbyService {
  rpc JoinLobby(JoinLobbyRequest) returns (JoinLobbyResponse);
  rpc LeaveLobby(LeaveLobbyRequest) returns (LeaveLobbyResponse);
  rpc ConnectLobby(ConnectLobbyRequest) returns (stream LobbyEvent);
}

message ConnectLobbyRequest {
}

message LeaveLobbyRequest {
}

message LeaveLobbyResponse {
}

message LobbyEvent {
  oneof event {
    Lobby update = 1;
    LobbyPlayer player_join = 2;
    uint64 player_leave = 3;
  }
}

message JoinLobbyRequest {
  string id = 1;
  string lobby_password = 2;
  string username = 3;
}

enum JoinLobbyError {
  FULL_LOBBY = 0;
  INVALID_PASSWORD = 1;
  INVALID_LOBBY = 2;
}

message JoinLobbySuccessResponse {
  Lobby lobby = 1;
  string ticket = 2;
}

message JoinLobbyResponse {
  oneof result {
    JoinLobbySuccessResponse success = 1;
    JoinLobbyError error = 2;
  }
}