syntax = "proto3";

option csharp_namespace = "Tempest.Protocol";

message Server {
  uint64 id = 1;
  string name = 2;
  string game = 3;
  string version = 4;
  string tags = 5;
  string map = 6;
  uint32 players = 7;
  uint32 max_players = 8;
  uint32 bots = 9;
  bool join_in_progress = 10;
  bool joinable = 11;
  string region = 12;
  uint32 max_spectators = 13;
  uint32 spectators = 14;
}